chore: upgrade to Java 21
Closes: MRSPECS-81