@@ -4,7 +4,7 @@
 
   <groupId>org.folio</groupId>
   <artifactId>mod-record-specifications</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <licenses>
@@ -21,14 +21,14 @@
   </modules>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <spring-boot.version>3.4.2</spring-boot.version>
-    <folio-spring-support.version>8.3.0-SNAPSHOT</folio-spring-support.version>
-    <folio-service-tools.version>4.2.0-SNAPSHOT</folio-service-tools.version>
-    <lombok.version>1.18.36</lombok.version>
+    <folio-spring-support.version>9.0.0-SNAPSHOT</folio-spring-support.version>
+    <folio-service-tools.version>5.0.0-SNAPSHOT</folio-service-tools.version>
+    <lombok.version>1.18.34</lombok.version>
     <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
@@ -273,6 +273,7 @@
         <configuration>
           <release>${java.version}</release>
           <parameters>true</parameters>
+          <compilerArgument>-proc:full</compilerArgument>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
@@ -332,7 +333,7 @@
           </execution>
         </executions>
         <configuration>
-          <moduleDescriptroFile>${basedir}/descriptors/ModuleDescriptor-template.json</moduleDescriptroFile>
+          <moduleDescriptorFile>${basedir}/descriptors/ModuleDescriptor-template.json</moduleDescriptorFile>
         </configuration>
       </plugin>
 
